fixed text cutting off in service column

--- a/src/mainWindow/assets/components/tableComponents/table/table.css
+++ b/src/mainWindow/assets/components/tableComponents/table/table.css
@@ -131,6 +131,7 @@ input.cell-input {
 	margin: 0;
 	text-align: center;
 	padding: 0;
+	font-family: ubuntu-monospace;
 }
 
 .cell-input.service {
@@ -160,12 +161,6 @@ input.cell-input {
 	transform: scale(0.85);
 	transition: 0.1s ease-out;
 }
-
-.table-cell.service {
-	flex-direction: row-reverse;
-	align-items: center;
-}
-
 #password {
 	user-select: none;
 	overflow-x: hidden !important;
@@ -182,9 +177,21 @@ input.cell-input {
 	padding: 0;
 }
 
+/* Service Cell */
+.table-cell.service {
+	align-items: safe center;
+}
+.cell-content.service {
+	display: flex;
+	transition: none;
+	width: fit-content;
+	margin: auto;
+	flex-direction: row-reverse;
+}
 #service-icon {
+	margin: 2px;
 	max-width: 30px;
 	max-height: 30px;
-	margin: 2px;
+	transition: none;
 	border-radius: 5px;
 }
